Fix contrast

--- a/sources/scss/_variable.scss
+++ b/sources/scss/_variable.scss
@@ -10,7 +10,7 @@ $colors: (
   whitesmoke:     #f7f9f9,
   dark:       		#191d21,
   muted:          #98a6ad,
-  body:           #fafdfb,
+  body:           #f4f6f9,
   font:           #6c757d,
   fontdark:       #34395e,
   white:          #ffffff,
